--- a/src/app/order/components/order-list/order-list.component.html
+++ b/src/app/order/components/order-list/order-list.component.html
@@ -6,10 +6,7 @@
         <div class="flex flex-row items-center content-center align-middle">
           <select matInput [formControl]="sortBy" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             <option value="id">ID</option>
-            <option value="reference">Référence</option>
-            <option value="serial_number">Numéro de Série</option>
-            <option value="unit">Unité</option>
-            <option value="room">Local</option>
+            <option value="date">Date</option>
           </select>
           <button *ngIf="isAsc.value" (click)="setAsc(false)">
             <mat-icon>arrow_upward</mat-icon>
@@ -26,7 +23,7 @@
         <div class="flex flex-row items-center content-center align-middle">
           <select matInput [formControl]="filterBy" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             <option [value]="null" selected>---</option>
-            <option *ngFor="let type of types" [value]="type.id">{{type.name}}</option>
+            <option *ngFor="let user of users" [value]="user.id">{{user.firstname}} {{user.lastname}}</option>
           </select>
           <button (click)="resetFilter()">
             <mat-icon>close</mat-icon>
@@ -39,27 +36,21 @@
       <input matInput [formControl]="searchBy" name="search" placeholder="Rechercher" type="text" id="search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
     </div>
   </div>
-  <a mat-button mat-flat-button color="primary" (click)="goToItemCreation()">Ajouter</a>
+  <a mat-button mat-flat-button color="primary" (click)="goToOrderCreation()">Ajouter</a>
 </div>
 <div class="flex items-center">
   <table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg sm:shadow-lg my-5 overflow-auto">
     <thead class="text-white sm:border-b-2-black">
       <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
         <th class="p-3 text-left">ID</th>
-        <th class="p-3 text-left">Type</th>
-        <th class="p-3 text-left">Référence</th>
-        <th class="p-3 text-left">Numéro de série</th>
-        <th class="p-3 text-left">Unité</th>
-        <th class="p-3 text-left">Local</th>
+        <th class="p-3 text-left">Date</th>
+        <th class="p-3 text-left">Utilisateur</th>
         <th class="p-3 text-left h-14" >Actions</th>
       </tr>
-      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngFor="let order of dataSource.data | filter:filterBy.value!:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
         <th class="p-3 text-left">ID</th>
-        <th class="p-3 text-left">Type</th>
-        <th class="p-3 text-left">Référence</th>
-        <th class="p-3 text-left">Numéro de série</th>
-        <th class="p-3 text-left">Unité</th>
-        <th class="p-3 text-left">Local</th>
+        <th class="p-3 text-left">Date</th>
+        <th class="p-3 text-left">Utilisateur</th>
         <th class="p-3 text-left h-14">Actions</th>
       </tr>
     </thead>
@@ -68,19 +59,13 @@
         <td class="hover:bg-gray-100 p-3">Pas de donnée</td>
         <td class="hover:bg-gray-100 p-3"></td>
         <td class="hover:bg-gray-100 p-3"></td>
-        <td class="hover:bg-gray-100 p-3"></td>
-        <td class="hover:bg-gray-100 p-3"></td>
-        <td class="hover:bg-gray-100 p-3"></td>
         <td class="hover:bg-gray-100 p-3 h-14"></td>
       </tr>
-      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 sm:border-2 sm:border-grey-light">
-        <td class="hover:bg-gray-100 p-3">{{item.id}}</td>
-        <td class="hover:bg-gray-100 p-3">{{item.type.name}}</td>
-        <td class="hover:bg-gray-100 p-3">{{item.reference}}</td>
-        <td class="hover:bg-gray-100 p-3">{{item.serial_number}}</td>
-        <td class="hover:bg-gray-100 p-3">{{item.unit}}</td>
-        <td class="hover:bg-gray-100 p-3">{{item.room}}</td>
-        <td class="hover:bg-gray-100 p-3 h-14"><button mat-flat-button color="accent" (click)="goTo(item.id)">Détails</button></td>
+      <tr *ngFor="let order of dataSource.data | filter:filterBy.value!:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 sm:border-2 sm:border-grey-light">
+        <td class="hover:bg-gray-100 p-3">{{order.id}}</td>
+        <td class="hover:bg-gray-100 p-3">{{order.date}}</td>
+        <td class="hover:bg-gray-100 p-3">{{order.user.firstname}} {{order.user.lastname}}</td>
+        <td class="hover:bg-gray-100 p-3 h-14"><button mat-flat-button color="accent" (click)="goTo(order.id)">Détails</button></td>
       </tr>
     </tbody>
   </table>
