--- a/src/app/intervention/components/intervention-details/intervention-details.component.html
+++ b/src/app/intervention/components/intervention-details/intervention-details.component.html
@@ -1,10 +1,11 @@
 <div *ngIf="intervention && intervention.item" class="flex flex-col justify-center min-h-5/6 pt-10">
     <div class="font-bold text-2xl pb-10">
-        <p>Intervention: </p>
+        <p>Opération: </p>
     </div>
     <div class="font-bold text-2xl pb-10">
         <div class="flex flex-col justify-between">
-            <p>Sur {{intervention.item.reference}} | {{intervention.item.serial_number}}</p>
+            <p>{{intervention.type.name}}</p>
+            <p>{{intervention.item.reference}} | {{intervention.item.serial_number}}</p>
             <p>{{intervention.unit}} | {{intervention.room}}</p>
         </div>
     </div>
