--- a/src/app/licence/components/licence-list/licence-list.component.html
+++ b/src/app/licence/components/licence-list/licence-list.component.html
@@ -51,7 +51,7 @@
       <input matInput [formControl]="searchBy" name="search" placeholder="Rechercher" type="text" id="search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
     </div>
   </div>
-  <a mat-button mat-flat-button color="primary" href="licence/create">Ajouter</a>
+  <a mat-button mat-flat-button color="primary" (click)="goToLicenceCreation()">Ajouter</a>
 </div>
 <div class="flex items-center">
   <table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg sm:shadow-lg my-5 overflow-auto">
