--- a/src/app/static/components/header/header.component.html
+++ b/src/app/static/components/header/header.component.html
@@ -10,12 +10,13 @@
       <div class="offcanvas-body flex-grow p-4 overflow-y-auto">
         <div class="dropdown relative mt-4">
           <mat-nav-list>
-            <a *ngIf="!auth.isLoggedIn()" mat-list-item href="/login"><mat-icon>fingerprint</mat-icon> Login</a>
-            <a *ngIf="auth.isLoggedIn()" mat-list-item (click)="auth.logout()"><mat-icon>exit_to_app</mat-icon> Logout</a>
+            <a *ngIf="!auth.isLoggedIn()" mat-list-item (click)="goToLogin()"><mat-icon>fingerprint</mat-icon> Login</a>
+            <a *ngIf="auth.isLoggedIn()" mat-list-item (click)="goToLogout()"><mat-icon>exit_to_app</mat-icon> Logout</a>
             <div *ngIf="auth.isLoggedIn()">
-              <a mat-list-item href="/item">Matériel</a>
-              <a mat-list-item href="/licence">Licences</a>
-              <a mat-list-item href="/intervention">Interventions</a>
+              <a mat-list-item (click)="goToItem()" data-bs-dismiss="offcanvas">Matériel</a>
+              <a mat-list-item (click)="goToLicence()" data-bs-dismiss="offcanvas">Licences</a>
+              <a mat-list-item (click)="goToIntervention()" data-bs-dismiss="offcanvas">Opérations</a>
+              <a mat-list-item (click)="goToOrder()" data-bs-dismiss="offcanvas">Commandes</a>
             </div>
           </mat-nav-list>
         </div>
@@ -40,19 +41,22 @@
       </div>
       <div class="justify-between invisible md:visible">
         <span *ngIf="true" class="">
-          <a href="/item" mat-flat-button color="primary">Matériel</a>
+          <a (click)="goToItem()" mat-flat-button color="primary">Matériel</a>
         </span>
         <span *ngIf="true" class="">
-          <a href="/licence" mat-flat-button color="primary">Licences</a>
+          <a (click)="goToLicence()" mat-flat-button color="primary">Licences</a>
         </span>
         <span *ngIf="true" class="">
-          <a href="/intervention" mat-flat-button color="primary">Interventions</a>
+          <a (click)="goToIntervention()" mat-flat-button color="primary">Opérations</a>
+        </span>
+        <span *ngIf="true" class="">
+          <a (click)="goToOrder()" mat-flat-button color="primary">Commandes</a>
         </span>
         <span *ngIf="!auth.isLoggedIn()" class="">
-          | <a href="login" mat-flat-button color="primary">Login</a>
+          | <a (click)="goToLogin()" mat-flat-button color="primary">Login</a>
         </span>
         <span *ngIf="auth.isLoggedIn()" class="">
-          | <a (click)="auth.logout()" mat-flat-button color="primary">Logout</a>
+          | <a (click)="goToLogout()" mat-flat-button color="primary">Logout</a>
         </span>
       </div>
     </mat-toolbar>
