--- a/src/app/intervention/components/intervention-list/intervention-list.component.html
+++ b/src/app/intervention/components/intervention-list/intervention-list.component.html
@@ -5,8 +5,8 @@
       <div class="flex flex-row items-center content-center align-middle">
         <select matInput [formControl]="sortBy" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
           <option value="id">ID</option>
-          <option value="reference">Référence</option>
-          <option value="serial_number">Numéro de Série</option>
+          <option value="description">Description</option>
+          <option value="expectedDate">Date Prévue</option>
           <option value="unit">Unité</option>
           <option value="room">Local</option>
         </select>
