--- a/src/app/item/components/item-details/item-details.component.html
+++ b/src/app/item/components/item-details/item-details.component.html
@@ -19,7 +19,7 @@
             [colorLight]="'#ffffffff'"
             [elementType]="'canvas'"
             [errorCorrectionLevel]="'M'"
-            [imageSrc]="'./assets/CHRV_logo.png'"
+            [imageSrc]="'./assets/CHRV_Logo.png'"
             [imageHeight]="45"
             [imageWidth]="45"
             [margin]="1"
