QoL chagnes Changes: - Added color code for items that are close or past their checkup_interval - Added color code for orders that are received or not - Added possibility to sort tables on boolean properties

--- a/src/app/intervention/components/intervention-details/intervention-details.component.html
+++ b/src/app/intervention/components/intervention-details/intervention-details.component.html
@@ -67,27 +67,29 @@
     <div class="py-4">
         <hr class="">
     </div>
-    <div class="grid gap-6 mb-6 md:grid-cols-5">
-        <div class="font-bold text-xl pb-4 ">
-            <h2>Licences:</h2>
+    <div *ngIf="isLicenceIntervention()">
+        <div class="grid gap-6 mb-6 md:grid-cols-5">
+            <div class="font-bold text-xl pb-4 ">
+                <h2>Licences:</h2>
+            </div>
         </div>
-    </div>
-    <table class="table-auto md:table-fixed">
-        <thead class="text-left">
-            <tr>
-                <th>Type</th>
-                <th>Description</th>
-                <th>Valeur</th>
-                <th>Utilisateur</th>
-            </tr>
-        </thead>
-        <tbody *ngIf="intervention.licences" class="text-left">
-            <tr *ngFor="let licence of intervention.licences">
-            <td>{{licence.type.name}}</td>
-            <td>{{licence.description}}</td>
-            <td>{{licence.value}}</td>
-            <td>{{licence.user?.firstname}} {{licence.user?.lastname}}</td>
-            </tr>
-        </tbody>
+        <table class="table-auto md:table-fixed">
+            <thead class="text-left">
+                <tr>
+                    <th>Type</th>
+                    <th>Description</th>
+                    <th>Valeur</th>
+                    <th>Utilisateur</th>
+                </tr>
+            </thead>
+            <tbody *ngIf="intervention.licences" class="text-left">
+                <tr *ngFor="let licence of intervention.licences">
+                <td>{{licence.type.name}}</td>
+                <td>{{licence.description}}</td>
+                <td>{{licence.value}}</td>
+                <td>{{licence.user?.firstname}} {{licence.user?.lastname}}</td>
+                </tr>
+            </tbody>
         </table>
+    </div>
 </div>
