Should be a stable version: Features: - Loading spinner - Improved tables - Improved order creation - Improved the list with more informations - Some bugfixes

--- a/src/app/intervention/components/intervention-list/intervention-list.component.html
+++ b/src/app/intervention/components/intervention-list/intervention-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row md:w-5/5 justify-between items-center content-center align-middle pt-5">
+<div class="grid grid-cols-2 sm:grid-cols-5 gap-6 justify-between pt-5 items-center content-center align-middle">
   <div>
     <div>
       <label>Trier par: </label>
