--- a/src/app/item/components/item-list/item-list.component.scss
+++ b/src/app/item/components/item-list/item-list.component.scss
@@ -6,6 +6,10 @@ $color-config:    mat.get-color-config($chr-theme);
 $primary-palette: map.get($color-config, 'primary');
 $accent-palette: map.get($color-config, 'accent');
 
+.text-primary{
+  color: mat.get-color-from-palette($primary-palette);
+}
+
 thead {
   background-color: mat.get-color-from-palette($accent-palette, A200);
 }
