--- a/src/app/order/components/order-details/order-details.component.html
+++ b/src/app/order/components/order-details/order-details.component.html
@@ -23,26 +23,32 @@
                 <h2>Matériel:</h2>
             </div>
         </div>
-        <table class="table-auto md:table-fixed">
-            <thead class="text-left">
-            <tr class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
-                <th class="p-3 text-left">Type</th>
-                <th class="p-3 text-left">Quantité</th>
-                <th class="p-3 text-left">Matériel</th>
-            </tr>
-            </thead>
-            <tbody *ngIf="order.types" class="text-left flex-1 sm:flex-none">
-                <tr *ngFor="let type of order.types" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
-                    <td class="p-3 text-left">{{type.type.name}}</td>
-                    <td class="p-3 text-left">{{type.quantity}}</td>
-                    <td class="p-3 text-left">
-                        <div *ngFor="let item of type.items">
-                            {{item.reference}} | {{item.serial_number}}
-                        </div>
-                    </td>
+        <mat-expansion-panel hideToggle *ngFor="let type of order.types">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{type.type.name}}
+              </mat-panel-title>
+              <mat-panel-description>
+                Quantité: {{type.quantity}}
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <table class="table-auto md:table-fixed">
+                <thead class="text-left">
+                <tr class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+                    <th class="p-3 text-left">Référence</th>
+                    <th class="p-3 text-left">Numéro de série</th>
+                    <th class="p-3 text-left">Description</th>
                 </tr>
-            </tbody>
-        </table>
+                </thead>
+                <tbody *ngIf="type" class="text-left flex-1 sm:flex-none">
+                    <tr *ngFor="let item of type.items" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+                        <td class="p-3 text-left">{{item.reference}}</td>
+                        <td class="p-3 text-left">{{item.serial_number}}</td>
+                        <td class="p-3 text-left">{{item.description}}</td>
+                    </tr>
+                </tbody>
+            </table>          
+        </mat-expansion-panel>
         <div class="py-4">
             <hr class="">
         </div>
