--- a/src/app/static/components/header/header.component.html
+++ b/src/app/static/components/header/header.component.html
@@ -62,9 +62,9 @@
     </mat-toolbar>
     <div class="flex h-screen justify-center">
       <div class="w-screen md:w-5/6 h-full">
-        <div [ngClass]="toast.showError()||toast.showSuccess()?'opacity-1 w-full h-9 sticky top-16 z-0':'absolute top-0 left-0 w-1 h-1'" class="transition duration-1000 ease-in-out flex flex-row toast-container">
-          <div [ngClass]="toast.showSuccess()?'opacity-1 w-full h-9':'opacity-0 w-1 h-1'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 success">{{toast.successMessage()}}</div>
-          <div [ngClass]="toast.showError()?'opacity-1 w-full h-9':'opacity-0 w-1 h-1'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 error">{{toast.errorMessage()}}</div>
+        <div [ngClass]="toast.showError()||toast.showSuccess()?'opacity-1 w-full sticky top-16 z-0':'absolute top-0 left-0 w-1 h-1'" class="transition duration-1000 ease-in-out flex flex-row toast-container">
+          <div [ngClass]="toast.showSuccess()?'opacity-1 w-full':'opacity-0 w-1 h-1'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 success">{{toast.successMessage()}}</div>
+          <div [ngClass]="toast.showError()?'opacity-1 w-full':'opacity-0 w-1 h-1'" class="z-50 transition-all duration-1000 text-white text-center font-bold rounded-2xl mt-5 p-2 error">{{toast.errorMessage()}}</div>
         </div>
         <div class="align-middle">
           <app-spinner></app-spinner>
