reworked application to use HttpOnly cookie for authentication instead of storing the token in localstorage

--- a/src/app/item/components/item-details/item-details.component.html
+++ b/src/app/item/components/item-details/item-details.component.html
@@ -115,7 +115,7 @@
                 </tr>
                 </thead>
                 <tbody *ngIf="interventions" class="text-left">
-                <tr *ngFor="let intervention of interventions" class="w-full shadow-xl shadow-black">
+                <tr *ngFor="let intervention of interventions" class="w-full">
                     <td class="p-3">{{intervention.type.name}}</td>
                     <td class="p-3">{{intervention.user.firstname}} {{intervention.user.lastname}}</td>
                     <td class="p-3">{{intervention.description}}</td>
